# bobr

./: .gitignore  AGENTS.md  ARCHITECTURE_NOTES.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_DESIGN.md  DESIGN.md  README.md  book.toml  deny.toml  flake.nix  format.sh  resume.sh
.cargo/: config.toml
.mbuild/: binary.ncl  github.ncl  recipes.ncl  schema.ncl  text.ncl
bobr/: Cargo.toml
bobr-builder/: Cargo.toml
bobr-builder/src/: builder.rs  bundle.rs  erofs.rs  error.rs  fs_tree_export.rs  fs_tree_import.rs  fs_tree_materialize.rs  group.rs  initramfs.rs  lib.rs  oci_extract.rs  registry.rs  subject.rs  test_support.rs  tree.rs  tree_merge.rs  tree_move.rs  tree_subset.rs
bobr-core/: Cargo.toml
bobr-core/src/: cancellation.rs  identity.rs  lib.rs  logging.rs  oci.rs  subject_run_context.rs  workspace.rs
bobr-runtime/: Cargo.toml
bobr-runtime/examples/demo/: checked_divide.rs  main.rs  namespace_identity.rs  uppercase.rs
bobr-runtime/src/: checked-divide.rs  checked_divide.rs  lib.rs  main.rs  namespace_identity.rs  runtime-child.rs  runtime-plain.rs  runtime.rs  runtime_child.rs  runtime_host.rs  runtime_ns.rs  runtime_plain.rs  runtime_provider.rs  uppercase.rs
bobr-sandbox/: Cargo.toml
bobr-sandbox-install/: Cargo.toml
bobr-sandbox-launcher/: Cargo.toml
bobr-sandbox-launcher/src/: launcher.rs  lib.rs  main.rs  protocol.rs  runner.rs
bobr-sandbox/src/: lib.rs  lifecycle.rs  mounts.rs  reports.rs  tools.rs
bobr-source/: Cargo.toml
bobr-source/src/: http.rs  lib.rs  origin.rs  origins.rs
bobr-source/src/oci_registry/: mod.rs  registry.rs
bobr-source/src/origins/: path.rs
bobr-store/: Cargo.toml
bobr-store/src/: error.rs  fs_tree.rs  fsutil.rs  id.rs  identity.rs  json.rs  key.rs  lib.rs  object.rs  publish.rs  record.rs  ref_name.rs  refs.rs  source.rs  store.rs  tests.rs
bobr/src/: builder_registry.rs  collect_graph.rs  execution.rs  lib.rs  main.rs  planned.rs  request.rs  resolved_inputs.rs
bobr/tests/: cli.rs  execution.rs  store.rs  support.rs
docs/: CAS.md  CONCEPTS.md  CONTENTS.md  FSOBJ_HASH.md  FS_TREE.md  FS_TREE_MANIFEST.md  FS_TREE_MANIFEST_V2.md  GETTING_STARTED.md  IMAGE_BUILDERS.md  INDEX.md  LOGGING.md  NICKEL.md  NICKEL_API.md  NICKEL_SKETCH.md  OVERRIDE_MODEL.md  OVERVIEW.md  REQUEST.md  REQUEST_FORMAT.md  ROOTFS_BUILDERS.md  SPLIT_OUTPUTS.md  STORE.md  STORE_AND_FS_TREE_AWARENESS.md  SUMMARY.md  TERM_MODEL.md  book.toml  source-builder-recipe-v1.ncl  (+1 more)
fsobj-hash/: Cargo.toml
fsobj-hash/src/: error.rs  hash.rs  hex_hash.rs  lib.rs  main.rs  node.rs  normalize.rs  object_hash.rs  path_source.rs  tar_source.rs
fsobj-hash/tests/: cli.rs  equivalence.rs  hash_path.rs  hash_tar.rs  object_hash.rs
mbuild/: Cargo.toml  README.md
mbuild-binary/: Cargo.toml  Containerfile  DESIGN.md  README.md
mbuild-binary/src/: container.rs  lib.rs  process.rs  sandbox.rs
mbuild-binary/tests/assets/: fake_podman_run.sh
mbuild-builder/: Cargo.toml
mbuild-builder/src/: builder.rs  erofs.rs  fs_tree.rs  fs_tree_import.rs  fs_tree_materialize.rs  group.rs  initramfs.rs  lib.rs  oci_extract.rs  oci_extract_legacy.rs  registry.rs  subject.rs  tree.rs  tree_merge.rs  tree_subset.rs
mbuild-builder/src/fs_tree/: erofs.rs  merge.rs  mod.rs
mbuild-builder/src/fs_tree_legacy/: archive.rs  erofs.rs  initramfs.rs  install.rs  legacy_object.rs  merge.rs  subset.rs  tests.rs  tree.rs
mbuild-builder/tests/: oci_extract_integration.rs  runtime_ownership.rs
mbuild-core/: Cargo.toml
mbuild-core/src/: builder.rs  cancellation.rs  cas.rs  fs_tree_compose.rs  fs_tree_manifest.rs  fs_tree_object.rs  fsutil.rs  identity.rs  initramfs.rs  lib.rs  logging.rs  object_index.rs  origin.rs  publication.rs  runtime_helper_protocol.rs  subject_run_context.rs  workspace.rs
mbuild-fetch/: Cargo.toml  README.md
mbuild-fetch/src/: lib.rs
mbuild-image/: Cargo.toml  DESIGN.md
mbuild-image/src/: layer.rs  lib.rs  oci.rs  registry.rs
mbuild-image/src/oci_extract/: mod.rs
mbuild-image/tests/: oci_extract_integration.rs
mbuild-image/tests/assets/: fake_podman_full.sh
mbuild-origin-http/: Cargo.toml
mbuild-origin-http/src/: lib.rs
mbuild-origin-oci-registry/: Cargo.toml
mbuild-origin-oci-registry/src/: lib.rs  oci.rs  registry.rs
mbuild-runtime/: Cargo.toml
mbuild-runtime-helper/: Cargo.toml
mbuild-runtime-helper/src/: helper.rs  initramfs_writer.rs  main.rs  materialize.rs  ownership.rs  tar_writer.rs
mbuild-runtime/src/: archive_writer.rs  bundle.rs  error.rs  idmap.rs  initramfs_writer.rs  lib.rs  local_helper.rs  local_ownership.rs  materialize.rs  ownership.rs  ownership_helper.rs  preflight.rs  run.rs  sandbox.rs  spec.rs  tar_writer.rs
mbuild-runtime/src/executor/: mod.rs
mbuild-runtime/src/helper/: mod.rs  ownership.rs
mbuild-runtime/src/sandbox/: config.rs  lifecycle.rs  mounts.rs  reports.rs  tools.rs
mbuild-runtime/tests/: apply_ownership_batch.rs  archive_helpers.rs  ownership_primitive.rs  run_lifecycle.rs
mbuild-sandbox/: Cargo.toml
mbuild-sandbox-runner-core/: Cargo.toml
mbuild-sandbox-runner-core/src/: lib.rs
mbuild-sandbox/src/: lib.rs
mbuild-store/: Cargo.toml
mbuild-store/src/: error.rs  fs_tree.rs  fsutil.rs  json.rs  key.rs  layout.rs  lib.rs  object.rs  publish.rs  record.rs  refs.rs  store.rs  tests.rs
mbuild-store/src/cas/: error.rs  id.rs  json.rs  key.rs  layout.rs  mod.rs  object.rs  publish.rs  record.rs  refs.rs  tests.rs
mbuild-store/src/fs_tree/: mod.rs
mbuild-tree/: Cargo.toml
mbuild-tree/src/: lib.rs
mbuild-tree/tests/: runtime_ownership.rs
mbuild/ncl/: store.ncl
mbuild/src/: builder_recipe.rs  builder_registry.rs  builders.rs  collect_graph.rs  execution.rs  lib.rs  logging.rs  main.rs  origins.rs  planned.rs  recipe.rs  recipe_runtime.rs  request.rs  resolved_inputs.rs  runtime.rs  runtime_policy.rs  store_interpreter.rs  subject_run.rs
mbuild/src/origins/: path.rs
mbuild/tests/: cli.rs  execution.rs  runtime.rs  store.rs  support.rs
mbuild/tests/assets/: fake_bwrap_full.sh  fake_podman_full.sh  store_recipe_full.ncl
mbuild/tests/support/: mod.rs
(+48 files in other folders)
