[workspace]
members = [
  "bobr",
  "bobr-builder",
  "bobr-core",
  "bobr-source",
  "bobr-sandbox-launcher",
  "bobr-store",
  "fsobj-hash",
  "bobr-runtime",
  "bobr-sandbox",
]

resolver = "3"

[workspace.lints.rust]
# The whole public API is documented; deny keeps it that way (test/example
# crates opt out with a crate-level allow).
missing_docs = "deny"
# Zero current noise — cheap ratchets (esp. unsafe_op, given heavy unsafe use).
unsafe_op_in_unsafe_fn = "warn"
elided_lifetimes_in_paths = "warn"

[workspace.lints.rustdoc]
# Catch broken `[intra-doc links]` as the docs are written (no current breakage).
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Future-proofing guards: none present today, keep debug/stub markers out.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
