[workspace]
members = [
  "bobr",
  "bobr-builder",
  "bobr-core",
  "bobr-source",
  "bobr-sandbox-launcher",
  "bobr-store",
  "fsobj-hash",
  "bobr-runtime",
  "bobr-sandbox",
]

resolver = "3"

[workspace.lints.rust]
# Hygiene ratchets: the workspace is clean of all of these, so deny keeps it
# that way (a new violation fails the build). Test/example crates opt out of
# missing_docs with a crate-level allow.
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
elided_lifetimes_in_paths = "deny"
unreachable_pub = "deny"
missing_debug_implementations = "deny"
unused_qualifications = "deny"

[workspace.lints.rustdoc]
# Catch broken `[intra-doc links]` as the docs are written (no current breakage).
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Future-proofing guards: none present today, keep debug/stub markers out.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
