[package]
name = "bobr-builder"
version.workspace = true
edition = "2024"
description = "Builder implementations and fs-tree tooling for the bobr content-addressed build system."
license.workspace = true
repository.workspace = true

[features]
integration-tests = []

[dependencies]
flate2.workspace = true
fsobj-hash.workspace = true
globset.workspace = true
libc.workspace = true
bobr-runtime.workspace = true
bobr-store.workspace = true
bobr-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
