[package]
name = "bobr-core"
version.workspace = true
edition = "2024"
description = "Core identity, keys, and request model for the bobr content-addressed build system."
license.workspace = true
repository.workspace = true

[dependencies]
bobr-runtime.workspace = true
fsobj-hash.workspace = true
indicatif.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time = { workspace = true, features = ["formatting", "macros", "parsing"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
