[package]
name = "bobr-runtime"
version.workspace = true
edition = "2024"
description = "Shared runtime types and helpers for the bobr content-addressed build system."
license.workspace = true
repository.workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
