[package]
name = "bobr-sandbox-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = [
    "dir",
    "fs",
    "hostname",
    "mount",
    "process",
    "sched",
    "user",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
