[package]
name = "bobr-sandbox-launcher"
version.workspace = true
edition = "2024"
description = "User-namespace sandbox launcher process for the bobr build system."
license.workspace = true
repository.workspace = true

[dependencies]
libc.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
