[package]
name = "bobr-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bobr-runtime = { path = "../bobr-runtime" }
bobr-store = { path = "../bobr-store" }
libc = "0.2"
mbuild-builder = { path = "../mbuild-builder" }
mbuild-core = { path = "../mbuild-core" }
mbuild-sandbox-runner-core = { path = "../mbuild-sandbox-runner-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
