[package]
name = "bobr-sandbox"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
bobr-runtime = { path = "../bobr-runtime" }
bobr-store = { path = "../bobr-store" }
libc = "0.2"
bobr-builder = { path = "../bobr-builder" }
bobr-core = { path = "../bobr-core" }
bobr-sandbox-launcher = { path = "../bobr-sandbox-launcher" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
