[package]
name = "bobr-source"
version = "0.1.0"
edition = "2024"

[dependencies]
bzip2 = "0.5"
flate2 = "1.0"
bobr-core = { path = "../bobr-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1.0"
tar = "0.4"
ureq = { version = "2", features = ["tls"] }
xz2 = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
fsobj-hash = { path = "../fsobj-hash" }
mockito = "1.6"
sha2 = "0.10"
tempfile = "3.14"
