[package]
name = "bobr-source"
version.workspace = true
edition = "2024"
description = "Source fetching and extraction (tarballs, archives, OCI) for the bobr build system."
license.workspace = true
repository.workspace = true

[features]
# Exposes the `oci_registry` client as public API. Enabled by `bobr` as a
# dev-dependency so its integration tests can drive the registry directly; off
# in normal builds, where `oci_registry` stays crate-private.
test-support = []

[dependencies]
bzip2.workspace = true
flate2.workspace = true
bobr-core.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tar.workspace = true
ureq.workspace = true
xz2.workspace = true
zip.workspace = true

[dev-dependencies]
fsobj-hash.workspace = true
mockito.workspace = true
sha2.workspace = true
tempfile.workspace = true

[lints]
workspace = true
