[package]
name = "bobr-store"
version.workspace = true
edition = "2024"
description = "On-disk content-addressed store (objects and fs-trees) for the bobr build system."
license.workspace = true
repository.workspace = true

[dependencies]
fsobj-hash.workspace = true
globset.workspace = true
libc.workspace = true
bobr-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time = { workspace = true, features = ["formatting", "local-offset", "macros", "parsing"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
