[package]
name = "bobr"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = ["bobr-builder/integration-tests"]

[dependencies]
bobr-runtime = { path = "../bobr-runtime" }
bobr-sandbox = { path = "../bobr-sandbox" }
bobr-store = { path = "../bobr-store" }
fsobj-hash = { path = "../fsobj-hash" }
libc = "0.2"
bobr-core = { path = "../bobr-core" }
bobr-builder = { path = "../bobr-builder" }
bobr-source = { path = "../bobr-source" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
flate2 = "1.0"
mockito = "1.6"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.14"
