[package]
name = "bobr-build"
version.workspace = true
edition = "2024"
description = "A content-addressed build system; installs the `bobr` command."
license.workspace = true
repository.workspace = true

# Package name is `bobr-build` (the crates.io name), but the library and the
# installed binary keep the short `bobr` name.
[lib]
name = "bobr"

[[bin]]
name = "bobr"
path = "src/main.rs"

[features]
integration-tests = ["bobr-builder/integration-tests"]

[dependencies]
bobr-runtime.workspace = true
bobr-sandbox-install.workspace = true
bobr-store.workspace = true
fsobj-hash.workspace = true
libc.workspace = true
bobr-core.workspace = true
bobr-builder.workspace = true
bobr-source.workspace = true
serde.workspace = true
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
bobr-source = { workspace = true, features = ["test-support"] }
flate2.workspace = true
mockito.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true

[lints]
workspace = true
