[package]
name = "fsobj-hash"
version.workspace = true
edition = "2024"
description = "Content-addressed hashing of filesystem objects for the bobr build system."
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
tar.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
