[package]
name = "mbuild-binary"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
mbuild-core = { path = "../mbuild-core" }
mbuild-runtime = { path = "../mbuild-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.14"
