[package]
name = "mbuild-builder"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = []

[dependencies]
flate2 = "1.0"
fsobj-hash = { path = "../fsobj-hash" }
globset = "0.4"
libc = "0.2"
bobr-runtime = { path = "../bobr-runtime" }
bobr-store = { path = "../bobr-store" }
mbuild-core = { path = "../mbuild-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
