[package]
name = "mbuild-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
mbuild-core = { path = "../mbuild-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
