[package]
name = "mbuild-image"
version = "0.1.0"
edition = "2024"

[dependencies]
mbuild-core = { path = "../mbuild-core" }
mbuild-origin-oci-registry = { path = "../mbuild-origin-oci-registry" }
mbuild-runtime = { path = "../mbuild-runtime" }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tracing = "0.1"

[dev-dependencies]
libc = "0.2"
tempfile = "3.14"

[features]
integration-tests = ["mbuild-runtime/integration-tests"]
