[package]
name = "mbuild-origin-http"
version = "0.1.0"
edition = "2024"

[dependencies]
mbuild-core = { path = "../mbuild-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.5"
xz2 = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
fsobj-hash = { path = "../fsobj-hash" }
tempfile = "3.14"
