[package]
name = "mbuild-origin-oci-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
mbuild-core = { path = "../mbuild-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ureq = { version = "2", features = ["tls"] }

[dev-dependencies]
mockito = "1.6"
tempfile = "3.14"
