[package]
name = "mbuild-runtime-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
fsobj-hash = { path = "../fsobj-hash" }
libc = "0.2"
mbuild-core = { path = "../mbuild-core" }
nix = { version = "0.29", features = ["fs", "user"] }
serde_json = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.14"
