[package]
name = "mbuild-runtime"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = []

[dependencies]
fsobj-hash = { path = "../fsobj-hash" }
libc = "0.2"
libcontainer = { git = "https://github.com/youki-dev/youki", rev = "4b2f0e00a4a11107f3a338c21c17407d2f664ec9", default-features = false, features = [
  "systemd",
  "v2",
] }
mbuild-core = { path = "../mbuild-core" }
mbuild-sandbox-runner-core = { path = "../mbuild-sandbox-runner-core" }
nix = { version = "0.29", features = ["fs", "process", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tar = "0.4"
tempfile = "3.14"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
