[package]
name = "mbuild-sandbox-runner-core"
version = "0.1.0"
edition = "2024"

[dependencies]
fsobj-hash = { path = "../fsobj-hash" }
libc = "0.2"
mbuild-core = { path = "../mbuild-core" }
nix = { version = "0.29", features = ["fs", "process", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
