[package]
name = "mbuild-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
mbuild-core = { path = "../mbuild-core" }
mbuild-runtime = { path = "../mbuild-runtime" }
mbuild-sandbox-runner-core = { path = "../mbuild-sandbox-runner-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
