[package]
name = "mbuild-store"
version = "0.1.0"
edition = "2024"

[dependencies]
fsobj-hash = { path = "../fsobj-hash" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }

[dev-dependencies]
tempfile = "3.14"
