[package]
name = "mbuild-tree"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = ["mbuild-runtime/integration-tests"]

[dependencies]
globset = "0.4"
mbuild-core = { path = "../mbuild-core" }
mbuild-runtime = { path = "../mbuild-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
fsobj-hash = { path = "../fsobj-hash" }
tempfile = "3.14"
