[package]
name = "mbuild-tree"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = ["mbuild-runtime/integration-tests"]

[dependencies]
fsobj-hash = { path = "../fsobj-hash" }
globset = "0.4"
mbuild-core = { path = "../mbuild-core" }
mbuild-runtime = { path = "../mbuild-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.14"
