[package]
name = "mbuild"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = ["mbuild-image/integration-tests", "mbuild-tree/integration-tests"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fsobj-hash = { path = "../fsobj-hash" }
libc = "0.2"
mbuild-core = { path = "../mbuild-core" }
mbuild-binary = { path = "../mbuild-binary" }
mbuild-origin-http = { path = "../mbuild-origin-http" }
mbuild-origin-oci-registry = { path = "../mbuild-origin-oci-registry" }
mbuild-image = { path = "../mbuild-image" }
mbuild-text = { path = "../mbuild-text" }
mbuild-tree = { path = "../mbuild-tree" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tar = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
flate2 = "1.0"
mockito = "1.6"
sha2 = "0.10"
tempfile = "3.14"
