[package]
name = "mbuild"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = ["mbuild-image/integration-tests", "mbuild-tree/integration-tests"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fsobj-hash = { path = "../fsobj-hash" }
libc = "0.2"
mbuild-core = { path = "../mbuild-core" }
mbuild-source = { path = "../mbuild-source" }
bobr-store = { path = "../bobr-store" }
mbuild-sandbox = { path = "../mbuild-sandbox" }
mbuild-group = { path = "../mbuild-group" }
mbuild-image = { path = "../mbuild-image" }
mbuild-tree = { path = "../mbuild-tree" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
flate2 = "1.0"
mockito = "1.6"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.14"
