[package]
name = "mbuild"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = ["mbuild-builder/integration-tests"]

[dependencies]
bobr-runtime = { path = "../bobr-runtime" }
bobr-sandbox = { path = "../bobr-sandbox" }
bobr-store = { path = "../bobr-store" }
fsobj-hash = { path = "../fsobj-hash" }
libc = "0.2"
mbuild-core = { path = "../mbuild-core" }
mbuild-builder = { path = "../mbuild-builder" }
mbuild-source = { path = "../mbuild-source" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
flate2 = "1.0"
mockito = "1.6"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.14"
